Fix tune up text overlap

--- a/style.css
+++ b/style.css
@@ -162,10 +162,8 @@
     margin-left: -67.5px;
   }
   #audio-pause {
-    left: auto;
-    right: 1.5px;
-    margin-left: auto;
-    margin-right: -22.5px;
+    left: 50%;
+    margin-bottom: -37.5px;
   }
 }
 
@@ -197,13 +195,13 @@
 }
 
 #tune-up-text { 
-  top: 0; 
-  transform: translateY(-100%);
+  top: 1vw; 
+  transform: translateY(-150%);
 }
 
 #tune-down-text { 
-  bottom: 0; 
-  transform: translateY(100%);
+  bottom: 1vw; 
+  transform: translateY(150%);
 }
 
 .tune-text.show {
